--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>  
 <html lang="en">  
   <head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Carbon Emission Tracker</title>  
-    <script async defer src={`https://maps.googleapis.com/maps/api/js?key=${process.env.REACT_APP_GOOGLE_MAPS_API_KEY}`}></script>  
+    <meta charset="utf-8" />  
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />  
+    <title>AI Skin Cancer Detection</title>  
   </head>  
   <body>  
+    <noscript>You need to enable JavaScript to run this app.</noscript>  
     <div id="root"></div>  
   </body>  
 </html>
